@@ -277,11 +277,7 @@ dc1394_is_video_mode_still_image(dc1394video_mode_t video_mode)
 }
 
 dc1394bool_t
-dc1394_is_same_camera(dc1394camera_t *camera1, dc1394camera_t *camera2)
+dc1394_is_same_camera(dc1394id_t id1, dc1394id_t id2)
 {
-  if ((camera1==NULL)||(camera2==NULL))
-    return 0;
-
-  return ((camera1->guid==camera2->guid)&&(camera1->unit==camera2->unit));
-
+  return ((id1.guid==id2.guid)&&(id1.unit==id2.unit));
 }
