@@ -39,7 +39,7 @@ dc1394error_t dc1394_is_color(dc1394color_coding_t color_mode, dc1394bool_t *is_
 dc1394bool_t dc1394_is_video_mode_scalable(dc1394video_mode_t video_mode);
 dc1394bool_t dc1394_is_video_mode_still_image(dc1394video_mode_t video_mode);
 dc1394error_t dc1394_update_camera_info(dc1394camera_t *camera);
-dc1394bool_t dc1394_is_same_camera(dc1394camera_t *camera1, dc1394camera_t *camera2);
+dc1394bool_t dc1394_is_same_camera(dc1394id_t id1, dc1394id_t id2);
 
 #ifdef __cplusplus
 }
